// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/FRichTextEditor Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="editor"
  >
    <div
      class="menubar"
    >
      <div
        class="menubar"
      >
        <button
          class="menubar__button"
        >
          
          H1
        
        </button>
         
        <button
          class="menubar__button"
        >
          
          H2
        
        </button>
         
        <button
          class="menubar__button"
        >
          
          H3
        
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_bold
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_italic
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_underlined
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_align_left
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_align_center
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_align_right
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_align_justify
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
          Add variable
        
          </div>
        </button>
      </div>
    </div>
     
    <div
      class="editor__content pa-3"
    >
      <div
        class="ProseMirror"
        contenteditable="true"
        tabindex="0"
      >
        <p>
          <br />
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`component/FRichTextEditor Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="editor"
  >
    <div
      class="menubar"
    >
      <div
        class="menubar"
      >
        <button
          class="menubar__button"
        >
          
          H1
        
        </button>
         
        <button
          class="menubar__button is-active"
        >
          
          H2
        
        </button>
         
        <button
          class="menubar__button"
        >
          
          H3
        
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_bold
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_italic
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_underlined
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_align_left
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_align_center
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_align_right
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--icon v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              format_align_justify
            </i>
          </div>
        </button>
         
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
          Add variable
        
          </div>
        </button>
      </div>
    </div>
     
    <div
      class="editor__content pa-3"
    >
      <div
        class="ProseMirror"
        contenteditable="true"
        tabindex="0"
      >
        <h2>
          Hi there,
        </h2>
        <p>
          this is a very 
          <em>
            basic
          </em>
           example of tiptap.
        </p>
        <p>
          body { display: none; }
        </p>
        <p>
           A regular list
        </p>
        <p>
           With regular items
        </p>
        <p>
           It's amazing 👏 – mom
        </p>
      </div>
    </div>
  </div>
</div>
`;
